<resources>
<!--    基础UI-->
    <string name="app_name">未来天气</string>
    <string name="search_place_edit_hint">请输入地区</string>
    <string name="add_place">添加地区</string>
    <string name="manage_place">管理地区</string>
    <string name="now_place">当前地区</string>
    <string name="tips_text">请在上方输入搜索地区</string>
    <string name="app_ps">天气数据由彩云天气API提供 @Created By 危君子</string>
<!--    天气UI-->
    <string name="daily_forecast">每日天气</string>
    <string name="life_index">生活指数</string>
    <string name="rain_probability">降雨概率</string>
    <string name="rain_30">00~30分钟</string>
    <string name="rain_60">30~60分钟</string>
    <string name="rain_90">60~90分钟</string>
    <string name="rain_120">90~120分钟</string>
    <string name="today_more">天气详情</string>
    <string name="hourly_forecast">分时天气</string>
    <string name="air_quality">空气质量</string>
    <string name="aqi">AQI</string>
    <string name="pm_25">PM2.5</string>
    <string name="min_temp">最低温度</string>
    <string name="max_temp">最高温度</string>
    <string name="apparent_temp">体感温度</string>
    <string name="humidity">相对湿度</string>
    <string name="sunrise">日出时间</string>
    <string name="sunset">日落时间</string>
    <string name="wind_direction">风源方向</string>
    <string name="wind_strength">风力级别</string>
    <string name="coldRisk">感冒指数</string>
    <string name="dressing">穿衣建议</string>
    <string name="ultraviolet">实时紫外线</string>
    <string name="card_washing">洗车建议</string>
    <string name="today_feel">今日天气人体感觉</string>

<!--    提示-->
    <string name="content_loading_holder">加载中</string>
    <string name="updateFail">更新失败</string>
    <string name="registerBroadcast">注册网络监听广播</string>
    <string name="unregisterBroadcast">注销网络监听广播</string>
    <string name="disconnect_tips">网络已断开，请连接网络</string>
    <string name="note_title">提示</string>
    <string name="note_now_content">系统默认展示当前地区的天气信息</string>
    <string name="note_switch_content">系统将开启天气信息通知提醒功能</string>
    <string name="note_delete_size1">地区列表需至少保留一个！</string>
    <string name="note_delete_content">是否将该地区从地区列表中移除？</string>
    <string name="note_location_content">是否将该地区设置为当前地区？</string>
    <string name="note_cancel">取消</string>
    <string name="note_delete">移除</string>
    <string name="note_confirm">确定</string>
    <string name="note_location">设定</string>
    <string name="note_rain_forecast_10">未来2小时内天气很好，可以放心出门。点击可查看详细的天气信息</string>
    <string name="note_rain_forecast_35">未来2小时内小概率会下雨，出门前可以留意天色。点击可查看详细的天气信息</string>
    <string name="note_rain_forecast_55">未来2小时内有一半概率会下雨，出门请带好您的雨具。点击可查看详细的天气信息</string>
    <string name="note_rain_forecast_75">未来2小时内很大概率会下雨，出门请带好您的雨具。点击可查看详细的天气信息</string>
</resources>
